<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DataFragment"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_name"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/name_text" />

    <TextView
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_name"
         />

    <TextView
        android:id="@+id/text_nationalId"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/national_id_text"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        />

    <TextView
        android:id="@+id/id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_mobileNo"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Mobile No:"
        app:layout_constraintStart_toStartOf="@+id/text_nationalId"
        app:layout_constraintTop_toBottomOf="@+id/text_nationalId"/>

    <TextView
        android:id="@+id/mobileNo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/id"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <TextView
        android:id="@+id/text_uai"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="UAI:"
        app:layout_constraintStart_toStartOf="@+id/text_nationalId"
        app:layout_constraintTop_toBottomOf="@+id/text_mobileNo" />

    <TextView
        android:id="@+id/uai"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/mobileNo"
        app:layout_constraintTop_toBottomOf="@+id/mobileNo" />

    <TextView
        android:id="@+id/text_no_of_acres"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_of_acres_text"
        app:layout_constraintStart_toStartOf="@+id/text_nationalId"
        app:layout_constraintTop_toBottomOf="@id/text_uai" />
    <TextView
        android:id="@+id/acres"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/uai"
        app:layout_constraintTop_toBottomOf="@+id/text_uai" />
    <TextView
        android:id="@+id/text_village"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Village"
        app:layout_constraintStart_toStartOf="@+id/text_nationalId"
        app:layout_constraintTop_toBottomOf="@id/text_no_of_acres" />

    <TextView
        android:id="@+id/village"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/acres"
        app:layout_constraintTop_toBottomOf="@id/text_no_of_acres" />
    <TextView
        android:id="@+id/text_subsidiary"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Subsidiary"
        app:layout_constraintStart_toStartOf="@+id/text_nationalId"
        app:layout_constraintTop_toBottomOf="@id/text_village" />

    <TextView
        android:id="@+id/ubsidiary"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/village"
        app:layout_constraintTop_toBottomOf="@id/text_village" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="@+id/ubsidiary"
        app:layout_constraintStart_toStartOf="@id/text_subsidiary"
        app:layout_constraintTop_toBottomOf="@id/text_subsidiary" />

</androidx.constraintlayout.widget.ConstraintLayout>