<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    tools:context=".fragments.FirstFragment" android:layout_width="match_parent">

    <!--    Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/purple_700"
        android:hint="@string/name"
        app:hintTextColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    National ID-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nationalIdTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/purple_700"
        android:hint="National Id"
        app:hintTextColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nationalIdText"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    MobileNo-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNoTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nationalIdTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/purple_700"
        android:hint="Mobile No"
        app:hintTextColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNoText"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    UAI-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UAITextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobileNoTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:helperText="Required"
        app:helperTextTextColor="@color/purple_700"
        android:hint="UAI"
        app:hintTextColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UAIText"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    No of Acres-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noOfAcresTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/no_of_acres"
        app:helperText="Required"
        app:helperTextTextColor="@color/purple_700"
        app:hintTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UAITextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noOfAcrestext"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/noOfAcresTextInput"
        app:layout_constraintStart_toStartOf="@+id/noOfAcresTextInput"
        app:layout_constraintTop_toBottomOf="@id/noOfAcresTextInput" />
</androidx.constraintlayout.widget.ConstraintLayout>
